--- a/client/src/app/modules/quotation/components/announcement/announcement.component.html
+++ b/client/src/app/modules/quotation/components/announcement/announcement.component.html
@@ -22,6 +22,7 @@
               <autocomplete-department [(model)]="announcement.department" [form]="announcementForm"
                 propertyName="department" [isMandatory]="true" [isDisabled]="!editMode" label="Département"
                 [isDisabled]="!editMode" (onOptionSelected)="updateCharacterPrice()"
+                [filterAvailableEntities]="announcement.confrere?announcement.confrere.departments:undefined"
                 [conditionnalRequired]=" !isStatusOpen">
               </autocomplete-department>
             </td>
