--- a/client/src/app/routing/sidenav-list/sidenav-list.component.html
+++ b/client/src/app/routing/sidenav-list/sidenav-list.component.html
@@ -10,6 +10,10 @@
   <img class="navbar-brand" ui-sref='main.tiers' [src]="logoOsiris" />
 </div>
 <mat-nav-list>
+  <a mat-list-item routerLink="/dashboard" *ngIf="canViewDashboardModule()"
+    [ngClass]="{'menu-item-active':getCurrentRoute().indexOf('/dashboard' )>=0}">
+    <mat-icon>dashboard</mat-icon> <span>Tableau de bord</span>
+  </a>
   <a mat-list-item routerLink="/tiers" *ngIf="canViewTiersModule()"
     [ngClass]="{'menu-item-active':getCurrentRoute().indexOf('/tiers' )>=0}">
     <mat-icon>group</mat-icon> <span>Tiers / Responsables</span>
