--- a/client/src/app/modules/quotation/components/affaire-list/affaire-list.component.html
+++ b/client/src/app/modules/quotation/components/affaire-list/affaire-list.component.html
@@ -1,6 +1,6 @@
 <div class="mat-elevation-z2 form-div">
   <div class=" full-width">
-    <table class="full-width table-fixed-layout">
+    <table class="full-width table-fixed-layout" *ngIf="!isForDashboard && affaireSearch">
       <tr>
         <td>
           <autocomplete-employee [(model)]="affaireSearch.responsible" label="Responsable" [form]="affaireSearchForm"
