--- a/client/src/app/modules/quotation/components/quotation-list/quotation-list.component.html
+++ b/client/src/app/modules/quotation/components/quotation-list/quotation-list.component.html
@@ -1,6 +1,6 @@
 <div class="mat-elevation-z2 form-div">
-  <div class=" full-width">
-    <table class="full-width table-fixed-layout">
+  <div class="full-width">
+    <table class="full-width table-fixed-layout" *ngIf="!isForDashboard && quotationSearch">
       <tr>
         <td>
           <autocomplete-sales-employee [(model)]="quotationSearch.salesEmployee" label="Commercial"
