--- a/client/src/app/modules/miscellaneous/components/forms/autocomplete-employee/autocomplete-employee.component.html
+++ b/client/src/app/modules/miscellaneous/components/forms/autocomplete-employee/autocomplete-employee.component.html
@@ -5,6 +5,9 @@
     </avatar>
     <input type="text" matInput [formControlName]="propertyName" [matAutocomplete]="matAutocomplete">
   </div>
+  <mat-icon matSuffix matTooltip="Me choisir" (click)="chooseMyself()" *ngIf="!isDisabled" class="pointer note-icon">
+    account_circle
+  </mat-icon>
   <mat-icon matSuffix (click)="clearField()" *ngIf="!isDisabled && model!=undefined" class="pointer">
     close
   </mat-icon>
